--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
+/.vs
 /.vs/RoomM.API/v15/Server/sqlite3/db.lock
+/.vscode
+/.bin//Debug
+/obj
+/RoomM.API.csproj.user
