Fix Logger (only modify a path for store in nlog.config)

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,8 +6,7 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Trace",
-        "Microsoft": "Information"
+        "Default": "Warning"
       }
     },
     "Console": {
