--- a/RoomM.API.csproj
+++ b/RoomM.API.csproj
@@ -19,11 +19,10 @@
   </ItemGroup>
   <ItemGroup>
      <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" PrivateAssets="All" />
-     <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.4" />
+     <PackageReference Include="NLog.Extensions.Logging" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="Log\" />
   </ItemGroup>
   <ItemGroup>
     <Content Update="nlog.config">
