--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,7 +5,7 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information"
     }
