--- a/RoomM.API.csproj
+++ b/RoomM.API.csproj
@@ -38,4 +38,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\Helps\" />
+  </ItemGroup>
 </Project>
