Implement Filters on Profile and Room(If I want more filter, write a condition on SomeRepository)

--- a/RoomM.API.csproj
+++ b/RoomM.API.csproj
@@ -39,6 +39,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Common\Helps\" />
+    <Folder Include="Common\Helpers\" />
   </ItemGroup>
 </Project>
