--- a/RoomM.API.csproj
+++ b/RoomM.API.csproj
@@ -23,6 +23,8 @@
     <Compile Remove="Migrations\20180704022647_ModifyAudit1.Designer.cs" />
     <Compile Remove="Migrations\20180704030241_RoomModify.cs" />
     <Compile Remove="Migrations\20180704030241_RoomModify.Designer.cs" />
+    <Compile Remove="Migrations\20180708013736_Photo.cs" />
+    <Compile Remove="Migrations\20180708013736_Photo.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="6.2.2" />
@@ -40,5 +42,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\Helpers\" />
+    <Folder Include="UpLoad\" />
   </ItemGroup>
 </Project>
